// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleLink snapshot test1 1`] = `
<DocumentFragment>
  <article>
    <div
      css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
    >
      <a
        aria-label="記事へのリンク"
        href="/slug"
      >
        tile
      </a>
    </div>
    <div
      css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
    >
      <div>
        <span
          css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
        >
          <time>
            2022年1月1日
          </time>
           公開
        </span>
      </div>
      <div>
        <div>
          <ul
            css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
          />
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`ArticleLink snapshot test2 1`] = `
<DocumentFragment>
  <article>
    <div
      css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
    >
      <a
        aria-label="記事へのリンク"
        href="/slug"
      >
        tile
      </a>
    </div>
    <div
      css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
    >
      <div>
        <span
          css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
        >
          <time>
            2022年1月1日
          </time>
           公開
        </span>
        <span
          css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
        >
           
          <time>
            2022年12月31日
          </time>
           更新
        </span>
      </div>
      <div>
        <div>
          <ul
            css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
          />
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`ArticleLink snapshot test3 1`] = `
<DocumentFragment>
  <article>
    <div
      css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
    >
      <a
        aria-label="記事へのリンク"
        href="/slug"
      >
        tile
      </a>
    </div>
    <div
      css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
    >
      <div>
        <span
          css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
        >
          <time>
            2022年1月1日
          </time>
           公開
        </span>
        <span
          css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
        >
           
          <time>
            2022年12月31日
          </time>
           更新
        </span>
      </div>
      <div>
        <div>
          <ul
            css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
          >
            <li>
              <a
                href="/tags/tag1/"
              >
                #tag1
              </a>
            </li>
            <li>
              <a
                href="/tags/tag2/"
              >
                #tag2
              </a>
            </li>
            <li>
              <a
                href="/tags/tag3/"
              >
                #tag3
              </a>
            </li>
            <li>
              <a
                href="/tags/tag4/"
              >
                #tag4
              </a>
            </li>
            <li>
              <a
                href="/tags/tag5/"
              >
                #tag5
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;
